@@ -1,5 +1,11 @@
 2008-12-15  Jürg Billeter  <j@bitron.ch>
 
+	* gobject/valaccodemethodmodule.vala:
+
+	Fix constructors in inner structs
+
+2008-12-15  Jürg Billeter  <j@bitron.ch>
+
 	* vala/valastruct.vala:
 	* gobject/Makefile.am:
 	* gobject/valaccodebasemodule.vala:
